--- a/solr/core/ivy.xml
+++ b/solr/core/ivy.xml
@@ -16,9 +16,6 @@
    specific language governing permissions and limitations
    under the License.    
 -->
-<!DOCTYPE ivy-module [
-  <!ENTITY hadoop.version "2.0.5-alpha">
-]>
 <ivy-module version="2.0"  xmlns:maven="http://ant.apache.org/ivy/maven">
   <info organisation="org.apache.solr" module="core"/>
   
@@ -47,19 +44,19 @@
     <dependency org="cglib" name="cglib-nodep" rev="2.2" conf="test->*"/>
     <dependency org="org.objenesis" name="objenesis" rev="1.2" conf="test->*"/>
 
-    <dependency org="org.apache.hadoop" name="hadoop-common" rev="&hadoop.version;" conf="compile.hadoop->*"/>
-    <dependency org="org.apache.hadoop" name="hadoop-hdfs" rev="&hadoop.version;" conf="compile.hadoop->*"/>
-    <dependency org="org.apache.hadoop" name="hadoop-annotations" rev="&hadoop.version;" conf="compile.hadoop->*"/>
-    <dependency org="org.apache.hadoop" name="hadoop-auth" rev="&hadoop.version;" conf="compile.hadoop->*"/>
+    <dependency org="org.apache.hadoop" name="hadoop-common" rev="${hadoop.version}" conf="compile.hadoop->*"/>
+    <dependency org="org.apache.hadoop" name="hadoop-hdfs" rev="${hadoop.version}" conf="compile.hadoop->*"/>
+    <dependency org="org.apache.hadoop" name="hadoop-annotations" rev="${hadoop.version}" conf="compile.hadoop->*"/>
+    <dependency org="org.apache.hadoop" name="hadoop-auth" rev="${hadoop.version}" conf="compile.hadoop->*"/>
     <dependency org="commons-configuration" name="commons-configuration" rev="1.6" conf="compile.hadoop->*"/>
     <dependency org="com.google.protobuf" name="protobuf-java" rev="2.4.0a" conf="compile.hadoop->*"/>
     <dependency org="com.googlecode.concurrentlinkedhashmap" name="concurrentlinkedhashmap-lru" rev="1.2" conf="compile.hadoop->*"/>
 
     <!-- Hadoop DfsMiniCluster Dependencies-->
-    <dependency org="org.apache.hadoop" name="hadoop-common" rev="&hadoop.version;" conf="test.DfsMiniCluster->*">
+    <dependency org="org.apache.hadoop" name="hadoop-common" rev="${hadoop.version}" conf="test.DfsMiniCluster->*">
       <artifact name="hadoop-common" type="test" ext="jar" maven:classifier="tests" />
     </dependency>
-    <dependency org="org.apache.hadoop" name="hadoop-hdfs" rev="&hadoop.version;" conf="test.DfsMiniCluster->*">
+    <dependency org="org.apache.hadoop" name="hadoop-hdfs" rev="${hadoop.version}" conf="test.DfsMiniCluster->*">
       <artifact name="hadoop-hdfs" type="test" ext="jar" maven:classifier="tests" />
     </dependency>
     <dependency org="org.mortbay.jetty" name="jetty" rev="6.1.26" conf="test.DfsMiniCluster->*"/>
