--- a/solr/build.xml
+++ b/solr/build.xml
@@ -278,6 +278,7 @@
         <exclude name="example/exampledocs/post.jar" />
         <exclude name="example/solr-webapp/**" />
         <exclude name="package/**"/>
+        <exclude name="**/*SNAPSHOT*"/>
       </additional-excludes>
       <additional-filters>
         <replaceregex pattern="jetty([^/]+)$" replace="jetty" flags="gi" />
