CDH-13909: Build should ignore SNAPSHOT dependencies when checking jar checksums. LUCENE-5209: Allow the license checker to optionally avoid check sum comparisons on SNAPSHOT dependencies.

--- a/cloudera/templates/cdh.build.template
+++ b/cloudera/templates/cdh.build.template
@@ -4,3 +4,5 @@ zookeeper.version=org.apache.zookeeper:zookeeper.version
 hadoop.version=org.apache.hadoop:hadoop-common.version
 avro.version=org.apache.avro:avro.version
 protobuf.version=com.google.protobuf:protobuf-java.version
+
+skipSnapshotsChecksum=true
