--- a/cloudera/templates/cdh.build.template
+++ b/cloudera/templates/cdh.build.template
@@ -3,3 +3,5 @@ reactor.repo=https://repository.cloudera.com/content/repositories/snapshots
 zookeeper.version=org.apache.zookeeper:zookeeper.version
 hadoop.version=org.apache.hadoop:hadoop-common.version
 avro.version=org.apache.avro:avro.version
+
+skipSnapshotsChecksum=true
