CDH-13686. Solr dependencies are not normalized for CDH build

--- a/cloudera/templates/cdh.build.template
+++ b/cloudera/templates/cdh.build.template
@@ -4,5 +4,5 @@ zookeeper.version=org.apache.zookeeper:zookeeper.version
 hadoop.version=org.apache.hadoop:hadoop-common.version
 avro.version=org.apache.avro:avro.version
 protobuf.version=com.google.protobuf:protobuf-java.version
-
+httpcomponents.version=org.apache.httpcomponents:httpclient.version
 skipSnapshotsChecksum=true
