--- a/solr/solrj/ivy.xml
+++ b/solr/solrj/ivy.xml
@@ -38,7 +38,7 @@
         - look for <httpcore.version> under <properties>:
         https://svn.apache.org/repos/asf/httpcomponents/httpclient/tags/4.2.3/pom.xml
        -->
-      <dependency org="org.apache.httpcomponents" name="httpcore" rev="${httpcomponents.version}" transitive="false"/>
+      <dependency org="org.apache.httpcomponents" name="httpcore" rev="${httpcomponents.core.version}" transitive="false"/>
       <dependency org="commons-io" name="commons-io" rev="${commons-io.version}" transitive="false"/>
       <dependency org="org.codehaus.woodstox" name="wstx-asl" rev="3.2.7" transitive="false"/>
       <dependency org="org.noggit" name="noggit" rev="0.5" transitive="false"/>
