--- a/dev-tools/maven/pom.xml.template
+++ b/dev-tools/maven/pom.xml.template
@@ -46,11 +46,11 @@
     <jetty.version>8.1.10.v20130312</jetty.version>
     <slf4j.version>1.6.6</slf4j.version>
     <log4j.version>1.2.16</log4j.version>
-    <tika.version>1.4</tika.version>
-    <httpcomponents.version>4.2.5</httpcomponents.version>
+    <tika.version>${cdh.tika.version}</tika.version>
+    <httpcomponents.version>${cdh.httpcomponents.version}</httpcomponents.version>
     <commons-io.version>2.1</commons-io.version>
     <restlet.version>2.1.1</restlet.version>
-    <hadoop.version>2.0.5-alpha</hadoop.version>
+    <hadoop.version>${cdh.hadoop.version}</hadoop.version>
 
     <!-- RandomizedTesting library system properties -->
     <tests.iters>1</tests.iters>
