CDH-13858: Add sentry to the solr build

--- a/cloudera/templates/cdh.build.template
+++ b/cloudera/templates/cdh.build.template
@@ -3,5 +3,6 @@ reactor.repo=https://repository.cloudera.com/content/repositories/snapshots
 zookeeper.version=org.apache.zookeeper:zookeeper.version
 hadoop.version=org.apache.hadoop:hadoop-common.version
 avro.version=org.apache.avro:avro.version
+sentry.version=1.3.0-incubating-SNAPSHOT
 
 skipSnapshotsChecksum=true
