--- a/dev-tools/maven/pom.xml.template
+++ b/dev-tools/maven/pom.xml.template
@@ -51,6 +51,7 @@
     <commons-io.version>2.1</commons-io.version>
     <restlet.version>2.1.1</restlet.version>
     <hadoop.version>2.0.5-alpha</hadoop.version>
+    <sentry.version>1.3.0-incubating-search-1.1.0-SNAPSHOT</sentry.version>
 
     <!-- RandomizedTesting library system properties -->
     <tests.iters>1</tests.iters>
@@ -346,6 +347,11 @@
       <dependency>
         <groupId>org.apache.sentry</groupId>
         <artifactId>sentry-binding-solr</artifactId>
+        <version>${sentry.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.sentry</groupId>
+        <artifactId>sentry-provider-file</artifactId>
         <version>${sentry.version}</version>
       </dependency>
       <dependency>
