--- a/sentry/pom.xml
+++ b/sentry/pom.xml
@@ -20,12 +20,12 @@ limitations under the License.
   <parent>
     <groupId>com.cloudera.cdh</groupId>
     <artifactId>cdh-root</artifactId>
-    <version>4.3.0-search-1.1.0-SNAPSHOT</version>
+    <version>4.3.0-search-1.1.0</version>
   </parent>
 
   <groupId>org.apache.sentry</groupId>
   <artifactId>sentry</artifactId>
-  <version>1.3.0-incubating-search-1.1.0-SNAPSHOT</version>
+  <version>1.3.0-incubating-search-1.1.0</version>
   <description>Sentry component</description>
   <name>Sentry</name>
   <packaging>pom</packaging>
@@ -53,9 +53,9 @@ limitations under the License.
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compile.source>1.6</maven.compile.source>
     <maven.compile.target>1.6</maven.compile.target>
-    <hive.version>0.10.0-cdh4.4.0-SNAPSHOT</hive.version>
+    <hive.version>0.10.0-cdh4.4.0</hive.version>
     <solr.version>4.5.1</solr.version>
-    <hadoop.version>2.0.0-cdh4.4.0-SNAPSHOT</hadoop.version>
+    <hadoop.version>2.0.0-cdh4.4.0</hadoop.version>
     <junit.version>4.9</junit.version>
     <fest.reflect.version>1.4.1</fest.reflect.version>
     <log4j.version>1.2.16</log4j.version>
@@ -64,8 +64,8 @@ limitations under the License.
     <slf4j.version>1.6.1</slf4j.version>
     <derby.version>10.4.2.0</derby.version>
     <libthrift.version>0.9.0-cdh4-1</libthrift.version>
-    <hadoop.version>2.0.0-cdh4.4.0-SNAPSHOT</hadoop.version>
-    <zookeeper.version>3.4.5-cdh4.4.0-SNAPSHOT</zookeeper.version>
+    <hadoop.version>2.0.0-cdh4.4.0</hadoop.version>
+    <zookeeper.version>3.4.5-cdh4.4.0</zookeeper.version>
   </properties>
 
   <dependencyManagement>
