--- a/solr/core/ivy.xml
+++ b/solr/core/ivy.xml
@@ -30,6 +30,7 @@
 
   <dependencies>
     <dependency org="commons-codec" name="commons-codec" rev="1.7" conf="compile->*"/>
+    <dependency org="commons-collections" name="commons-collections" rev="3.2.1" conf="compile->*"/>
     <dependency org="commons-fileupload" name="commons-fileupload" rev="1.2.1" conf="compile->*"/>
     <dependency org="commons-cli" name="commons-cli" rev="1.2" conf="compile->*"/>
     <dependency org="commons-lang" name="commons-lang" rev="2.6" conf="compile->*"/>
