--- a/cloudera/templates/cdh.build.template
+++ b/cloudera/templates/cdh.build.template
@@ -6,4 +6,5 @@ avro.version=org.apache.avro:avro.version
 protobuf.version=com.google.protobuf:protobuf-java.version
 httpcomponents.version=org.apache.httpcomponents:httpclient.version
 httpcomponents.core.version=org.apache.httpcomponents:httpcore.version
+sentry.version=1.3.0-incubating-search-1.1.0
 skipSnapshotsChecksum=true
