--- a/solr/core/ivy.xml
+++ b/solr/core/ivy.xml
@@ -40,7 +40,15 @@
     <dependency org="org.restlet.jee" name="org.restlet.ext.servlet" rev="2.1.1" conf="compile->*"/>
     <dependency org="joda-time" name="joda-time" rev="2.2" conf="compile->*"/>
     <dependency org="org.codehaus.jackson" name="jackson-core-asl" rev="1.9.13" conf="compile->*"/>
-   
+
+    <dependency org="org.apache.sentry" name="sentry-binding-solr" rev="${sentry.version}" conf="compile->*"/>
+    <dependency org="org.apache.sentry" name="sentry-core-common" rev="${sentry.version}" conf="compile->*"/>
+    <dependency org="org.apache.sentry" name="sentry-core-model-search" rev="${sentry.version}" conf="compile->*"/>
+    <dependency org="org.apache.sentry" name="sentry-policy-common" rev="${sentry.version}" conf="compile->*"/>
+    <dependency org="org.apache.sentry" name="sentry-policy-search" rev="${sentry.version}" conf="compile->*"/>
+    <dependency org="org.apache.sentry" name="sentry-provider-common" rev="${sentry.version}" conf="compile->*"/>
+    <dependency org="org.apache.sentry" name="sentry-provider-file" rev="${sentry.version}" conf="compile->*"/>
+    <dependency org="org.apache.shiro" name="shiro-core" rev="1.2.1" conf="compile->*"/>
 
     <dependency org="javax.servlet" name="javax.servlet-api" rev="3.0.1" conf="test->*"/>
     <dependency org="org.easymock" name="easymock" rev="3.0" conf="test->*"/>
