BUILD Fix typo in maven specification

--- a/dev-tools/maven/solr/core/src/java/pom.xml.template
+++ b/dev-tools/maven/solr/core/src/java/pom.xml.template
@@ -281,11 +281,11 @@
       </exclusions>
     </dependency>
     <dependency>
-      <groupId>org.apache.sentry</groupid>
+      <groupId>org.apache.sentry</groupId>
       <artifactId>sentry-binding-solr</artfactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.sentry</groupid>
+      <groupId>org.apache.sentry</groupId>
       <artifactId>sentry-provider-file</artfactId>
     </dependency>
     <dependency>
