--- a/dev-tools/maven/pom.xml.template
+++ b/dev-tools/maven/pom.xml.template
@@ -51,7 +51,7 @@
     <commons-io.version>2.1</commons-io.version>
     <restlet.version>2.1.1</restlet.version>
     <hadoop.version>${cdh.hadoop.version}</hadoop.version>
-    <sentry.version>1.3.0-incubating-search-1.1.0</sentry.version>
+    <sentry.version>1.2.0-cdh5.0.0-SNAPSHOT</sentry.version>
 
     <!-- RandomizedTesting library system properties -->
     <tests.iters>1</tests.iters>
