--- a/dev-tools/maven/solr/contrib/pom.xml.template
+++ b/dev-tools/maven/solr/contrib/pom.xml.template
@@ -37,6 +37,7 @@
     <module>dataimporthandler-extras</module>
     <module>extraction</module>
     <module>langid</module>
+    <module>sentry-handlers</module>
     <module>uima</module>
     <module>velocity</module>
   </modules>
