--- a/cloudera/templates/cdh.build.template
+++ b/cloudera/templates/cdh.build.template
@@ -6,5 +6,6 @@ avro.version=org.apache.avro:avro.version
 protobuf.version=com.google.protobuf:protobuf-java.version
 httpcomponents.version=org.apache.httpcomponents:httpclient.version
 httpcomponents.core.version=org.apache.httpcomponents:httpcore.version
+slf4j.version=org.slf4j:slf4j-api.version
 sentry.version=1.2.0-cdh5.0.0-SNAPSHOT
 skipSnapshotsChecksum=true
