--- a/cloudera/templates/cdh.build.template
+++ b/cloudera/templates/cdh.build.template
@@ -3,6 +3,7 @@ reactor.repo=https://repository.cloudera.com/content/repositories/snapshots
 zookeeper.version=org.apache.zookeeper:zookeeper.version
 hadoop.version=org.apache.hadoop:hadoop-common.version
 avro.version=org.apache.avro:avro.version
+slf4j.version=org.slf4j:slf4j-api.version
 sentry.version=1.3.0-incubating-search-1.2.0-SNAPSHOT
 
 skipSnapshotsChecksum=true
